2002-10-04  Angus Leeming  <leeming@lyx.org>

	* form_graphics.fd: un-cripple dialog by reverting yesterday's change.

	* FeedbackController.C (PrehandlerCB): reduce the necessary calcs to the
	bare minimum.

	* combox.[Ch]: the optional tabfolder args passed to the c-tor are
	no longer necessary and are scrapped.
	(show): use the same, minimal fix as in PrehandlerCB to ensure that
	the form's x,y coords are up to date. In truth, this fix should be
	redundant, but not all "enter" events are caught by the prehandler.

	* FormDocument.C (build):
	* FormPreferences.C (xyz::build): no longer pass the tabfolder to the
	combox c-tor.

2002-10-03  Angus Leeming  <leeming@lyx.org>

	* FeedbackController.C (PrehandlerCB): re-compute the folder->x,
	folder->y coords of a tabfolder when the mouse enters the folder.
	This works around an xforms bug that manifests itslf as tooltips
	appearing in their original position after the dialog has been
	moved aside.

	* FormAboutlyx.C (build):
	* FormDocument.C (build):
	* FormGraphics.C (build):
	* FormPreferences.C (build):
	* FormTabular.C (build): set the prehandler for tabfolders.

	* form_graphics.fd: move the edge of the tabfolder in by 5 pixels
	to ensure that the tabfolder prehandler is called.

2002-10-03  Angus Leeming  <leeming@lyx.org>

	* lyx_gui.C (start): ev.xany.type is of type 'int' so print it as a
	decimal not a hexadecimal.

	* FormBase.C (hide):
	* FormBaseDeprecated.C (hide): ensure that tooltips are hidden along
	with the dialog.

2002-09-30  Angus Leeming  <leeming@lyx.org>

	* FormBase.[Ch]:
	* FormBaseDeprecated.[Ch]:
	(icon_pixmap_, icon_mask_) new member variables.
	(prepare_to_show) new method, containing initialisation code invoked
	the first time show() is called.
	(d-tor) destroy icon_pixmap_, if it exists.
	(show) ensure that the icon pixmap is generated only once.

	* XFormsView.[Ch]:
	(icon_pixmap_, icon_mask_) new member variables.
	(d-tor) destroy icon_pixmap_, if it exists.