@@ -1,3 +1,9 @@
+2002-10-07  Angus Leeming  <leeming@lyx.org>
+
+	* FormBase.C (hide):
+	* FormBaseDeprecated.C (hide): wrap that call to fl_hide_tooltip inside
+	#ifdef required xforms version.
+
 2002-10-04  Angus Leeming  <leeming@lyx.org>
 
 	* form_graphics.fd: un-cripple dialog by reverting yesterday's change.
